<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public function up(): void
    {
        Schema::create('tasks', function (Blueprint $table) {
            $table->id();
            $table->foreignId('project_id')->constrained()->cascadeOnDelete();
            $table->string('name');
            $table->text('description')->nullable();
            $table->enum('task_type', [
                'retrofit',
                'inspection',
                'commissioning',
                'maintenance',
                'installation',
                'testing',
                'documentation',
                'training'
            ])->default('maintenance');
            $table->boolean('is_active')->default(true);
            $table->decimal('estimated_hours', 8, 2)->nullable(); // Changed from 5,2 to 8,2 (up to 999,999.99 hours)
            $table->date('start_date')->nullable();
            $table->date('end_date')->nullable();
            $table->unsignedTinyInteger('progress')->default(0);
            $table->json('dependencies')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('tasks');
    }
};
